packages/player/src/assets/tailwind.css
:host { all: initial }

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    --bc: 0 0% 100%; /* white */
  }
}

@layer components {
  /* Change default button size */
  .btn {
    height: 2.25rem;
    min-height: 2.25rem;
  }
  .btn-circle {
    width: 2.25rem;
    height: 2.25rem;
  }

  .spinner {
      aspect-ratio: 1/1;
      border-radius: 50%;
      box-sizing: border-box;
      animation: rotation 4s linear infinite;
  }
  @keyframes rotation {
    0% {
      transform: rotate(0deg);
      border: 4px solid hsl(var(--p));
      border-bottom-color: transparent;
    }
    50% {
      transform: rotate(360deg);
      border: 4px solid hsl(var(--s));
      border-bottom-color: transparent;
    }
    100% {
      transform: rotate(719.99deg);
      border: 4px solid hsl(var(--p));
      border-bottom-color: transparent;
    }
  }

  .volume {
    height: 6px;
    width: 100%;
    cursor: pointer;
    appearance: none;
    -webkit-appearance: none;
    overflow: hidden;
    background-color: transparent;
    border-radius: 3px;
    outline: none;
  }
   .volume::-moz-range-track, .volume::-moz-range-track {
    height: 6px;
    width: 100%;
    border-radius: 3px;
    background-color: hsla(var(--in) / 0.3);
  }
  .volume::-moz-range-thumb {
    background-color: hsl(var(--in));
    position: relative;
    height: 6px;
    width: 6px;
    border-style: none;
    border-radius: 3px;
    appearance: none;
    -webkit-appearance: none;
    top: 0px;
    --filler-size: 100rem/* 1600px */;
    --filler-offset: 3px;
    box-shadow: 0 0 0 3px hsl(var(--in)) inset, var(--focus-shadow, 0 0), calc(var(--filler-size) * -1 - var(--filler-offset)) 0 0 var(--filler-size);
  }
  .volume::-webkit-slider-thumb {
    position: relative;
    height: 12px;
    width: 12px;
    border-style: none;
    border-radius: 6px;
    appearance: none;
    -webkit-appearance: none;
    top: 50%;
    transform: translateY(-50%);
  }
}

